--- a/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
+++ b/YellowstonePathology/UI/Test/LynchSyndromeEvaluationResultPage.xaml
@@ -247,8 +247,11 @@
 		</Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-        <Button Name="ButtonBack" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
-		<Button Name="ButtonNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+        <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button Name="ButtonBack" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40">&lt; Back</Button>
+            <Button Name="ButtonMatrix" Margin="5,5,5,5" Click="ButtonMatrix_Click" Width="100" Height="40">Matrix</Button>
+        </StackPanel>
+        <Button Name="ButtonNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
 
 	</Grid>
 </Test:ResultControl>
