Add WebServiceAccountClientEditDialog, modify AccountEditDialog

--- a/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account Edit" Height="380"  Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
+        Title="Web Service Account" Height="380"  Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <TabControl Grid.Column="0" Grid.Row="0" Margin="2">
-            <TabItem Header="Web Service Account (Pg 1)">
+            <TabItem Header="Page 1">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -38,7 +38,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Id:" />
@@ -81,7 +81,7 @@
                     <CheckBox Grid.Column="1" Grid.Row="12" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SavePasswordLocal}" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Web Service Account (Pg 2)">
+            <TabItem Header="Page 2">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -142,33 +142,30 @@
 
                     <TextBlock Grid.Column="0" Grid.Row="12" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Object Id:" />
                     <TextBlock Grid.Column="1" Grid.Row="12" Margin="2" Text="{Binding Path=WebServiceAccount.ObjectId}" />
+
                 </Grid>
             </TabItem>
-            <TabItem Header="Web Service Account Client">
+            <TabItem Header="Client">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Client Id:" />
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=WebServiceAccountClient.WebServiceAccountClientId}" />
+                    <ListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2" Name="ListViewWebServiceAccountClientViews"
+                              ItemsSource="{Binding Path=WebServiceAccountClientViews}" MouseDoubleClick="ListViewWebServiceAccountClientViews_MouseDoubleClick">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="400" Header="Client" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
 
-                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Id:" />
-                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccountClient.WebServiceAccountId}" />
-
-                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Client Id:" />
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccountClient.ClientId}" />
-
-                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Object Id:" />
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccountClient.ObjectId}" />
+                    <Button Name="ButtonNewClient" Grid.Column="0" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Left" Click="ButtonNewClient_Click">New</Button>
                 </Grid>
             </TabItem>
         </TabControl>
