Add Delete to WebServiceAccount and WebServiceAccountClient

--- a/YellowstonePathology/UI/WebService/WebServiceAccountClientEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountClientEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account Client" Height="300" Width="300" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
+        Title="Web Service Account Client" Height="700" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
     <Grid Margin="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -21,12 +21,15 @@
                               ItemsSource="{Binding Path=WebServiceClientViews}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="280" Header="Client" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="380" Header="Client" />
                 </GridView>
             </ListView.View>
         </ListView>
 
-        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Name="ButtonOK" Grid.Column="1" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonOK_Click">Add</Button>
+            <Button Name="ButtonCancel" Grid.Column="1" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonCancel_Click">Cancel</Button>
+        </StackPanel>
 
     </Grid>
 </Window>
