--- a/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account" Height="380"  Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
+        Title="Web Service Account" Height="500"  Width="700" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -157,7 +157,7 @@
                     </Grid.RowDefinitions>
 
                     <ListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2" Name="ListViewWebServiceAccountClientViews"
-                              ItemsSource="{Binding Path=WebServiceAccountClientViews}" MouseDoubleClick="ListViewWebServiceAccountClientViews_MouseDoubleClick">
+                              ItemsSource="{Binding Path=WebServiceAccount.WebServiceAccountClientCollection}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="400" Header="Client" />
@@ -165,7 +165,11 @@
                         </ListView.View>
                     </ListView>
 
-                    <Button Name="ButtonNewClient" Grid.Column="0" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Left" Click="ButtonNewClient_Click">New</Button>
+                    <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+                    <Button Name="ButtonAddClient" Grid.Column="0" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Left" Click="ButtonAddClient_Click">Add</Button>
+                    <Button Name="ButtonDeleteClient" Grid.Column="0" Grid.Row="1" Margin="2" Height="30" Width="80" HorizontalAlignment="Left" Click="ButtonDeleteClient_Click">Delete</Button>
+                       
+                    </StackPanel>
                 </Grid>
             </TabItem>
         </TabControl>
