--- a/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
@@ -31,6 +31,7 @@
 
         <Button Name="ButtonNew" Grid.Column="0" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Left" Click="ButtonNew_Click">New</Button>
         <Button Name="ButtonUpdate" Grid.Column="1" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Left" Click="ButtonUpdate_Click">Update MS</Button>
+        <Button Name="ButtonDelete" Grid.Column="1" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Center" Click="ButtonDelete_Click">Delete</Button>
         <Button Name="ButtonOK" Grid.Column="1" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
 
     </Grid>
