--- a/YellowstonePathology/UI/Login/Receiving/ClientOrderShortDetailsPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/ClientOrderShortDetailsPage.xaml
@@ -59,7 +59,7 @@
 			<TextBox Grid.Column="1" Grid.Row="3" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=ClientOrder.PMiddleInitial, Converter={StaticResource UpperCaseConverter}}"  FontSize="14"/>
 
 			<TextBlock Grid.Column="0" Grid.Row="4" Margin="3" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" FontSize="14">Birthdate:</TextBlock>
-			<TextBox Grid.Column="1" Grid.Row="4" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=ClientOrder.PBirthdate, Converter={StaticResource ShortDateConverter}}" FontSize="14"/>
+			<TextBox Name="TextBoxPBirthdate" Grid.Column="1" Grid.Row="4" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=ClientOrder.PBirthdate, Converter={StaticResource ShortDateConverter}}" FontSize="14"/>
             
 		</Grid>
 
